Creato con Colaboratory

--- a/Progetto.ipynb
+++ b/Progetto.ipynb
@@ -16,12 +16,12 @@
         "id": "g3HBPwWoqUrJ"
       },
       "source": [
-        "PROGETTO"
+        "FIRE DETECTION WITH YOLOv5"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -138,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1615,7 +1615,7 @@
         "id": "wpghm5tuRGPO",
         "outputId": "5a6c8afa-8f6b-4cf8-d472-3e882fdf6659"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1639,7 +1639,7 @@
         "id": "GYk9nuxUXwsD",
         "outputId": "e5882069-73b3-4a5b-d81b-a1746d98cb2b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2375,7 +2375,7 @@
       "metadata": {
         "id": "tgwcSbK34sbE"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2391,7 +2391,7 @@
         "id": "Vg7V1bxYAP6a",
         "outputId": "328503da-daac-4100-d7ba-2d9a41e8185d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3013,7 +3013,7 @@
         "id": "x6eZuIfNWz3t",
         "outputId": "bf2347cb-f343-4f1a-d40c-86c69cf0800f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3046,7 +3046,7 @@
         "id": "naK_tq7ZOmiY",
         "outputId": "c4208e73-990b-4e1a-ab3b-584ab1611e0e"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3182,130 +3182,6 @@
             "Speed: 0.5ms pre-process, 38.8ms inference, 0.8ms NMS per image at shape (1, 3, 512, 512)\n",
             "Results saved to \u001b[1mruns/detect/detect_customhyp4\u001b[0m\n"
           ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#GRADIO APP\n",
-        "\n",
-        "!pip install gradio -q\n",
-        "import gradio as gr\n",
-        "import torch\n",
-        "from PIL import Image\n",
-        "\n",
-        "# Model\n",
-        "model = torch.hub.load('.', 'custom', 'runs/train/fine_tuning/weights/best.pt', source='local',force_reload=True)  # local repo\n",
-        "\n",
-        "\n",
-        "def yolo(im, size=640):\n",
-        "    g = (size / max(im.size))  # gain\n",
-        "    im = im.resize((int(x * g) for x in im.size), Image.ANTIALIAS)  # resize\n",
-        "\n",
-        "    results = model(im)  # inference\n",
-        "    results.render()  # updates results.imgs with boxes and labels\n",
-        "    return Image.fromarray(results.imgs[0])\n",
-        "\n",
-        "\n",
-        "inputs = gr.inputs.Image(type='pil', label=\"Original Image\")\n",
-        "outputs = gr.outputs.Image(type=\"pil\", label=\"Output Image\")\n",
-        "\n",
-        "title = \"YOLOv5 Fire Detection\"\n",
-        "description = \"YOLOv5 demo for fire detection. Upload an image or click an example image to use.\"\n",
-        "article = \"<p style='text-align: center'>YOLOv5 is a family of compound-scaled object detection models trained on the COCO dataset, and includes \" \\\n",
-        "          \"simple functionality for Test Time Augmentation (TTA), model ensembling, hyperparameter evolution, \" \\\n",
-        "          \"and export to ONNX, CoreML and TFLite. <a href='https://github.com/ultralytics/yolov5'>Source code</a> |\" \\\n",
-        "          \"<a href='https://apps.apple.com/app/id1452689527'>iOS App</a> | <a href='https://pytorch.org/hub/ultralytics_yolov5'>PyTorch Hub</a></p>\"\n",
-        "\n",
-        "examples = [['../datasets/fire/test/images/fire.103.png'], ['../datasets/fire/test/images/fire.109.png']]\n",
-        "gr.Interface(yolo, inputs, outputs, title=title, description=description, article=article, examples=examples).launch(\n",
-        "    debug=True)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 969
-        },
-        "id": "sIeGSYl1_A04",
-        "outputId": "15f8f143-47ac-4a37-8c6c-640796848a7a"
-      },
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\u001b[31m\u001b[1mrequirements:\u001b[0m PyYAML>=5.3.1 not found and is required by YOLOv5, attempting auto-update...\n",
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: PyYAML>=5.3.1 in /usr/local/lib/python3.7/dist-packages (6.0)\n",
-            "\n",
-            "\u001b[31m\u001b[1mrequirements:\u001b[0m 1 package updated per /content/Yolov5-Fire-Detection/yolov5/requirements.txt\n",
-            "\u001b[31m\u001b[1mrequirements:\u001b[0m ⚠️ \u001b[1mRestart runtime or rerun command for updates to take effect\u001b[0m\n",
-            "\n",
-            "YOLOv5 🚀 v6.1-259-ga2a1ed2 Python-3.7.13 torch-1.11.0+cu113 CUDA:0 (Tesla T4, 15110MiB)\n",
-            "\n",
-            "Fusing layers... \n",
-            "YOLOv5s summary: 213 layers, 7012822 parameters, 0 gradients\n",
-            "Adding AutoShape... \n",
-            "/usr/local/lib/python3.7/dist-packages/gradio/deprecation.py:40: UserWarning: `optional` parameter is deprecated, and it has no effect\n",
-            "  warnings.warn(value)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Colab notebook detected. This cell will run indefinitely so that you can see errors and logs. To turn off, set debug=False in launch().\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Connected (version 2.0, client OpenSSH_7.6p1)\n",
-            "Authentication (publickey) successful!\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Running on public URL: https://50236.gradio.app\n",
-            "\n",
-            "This share link expires in 72 hours. For free permanent hosting, check out Spaces (https://huggingface.co/spaces)\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "<div><iframe src=\"https://50236.gradio.app\" width=\"900\" height=\"500\" allow=\"autoplay; camera; microphone;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Keyboard interruption in main thread... closing server.\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(<gradio.routes.App at 0x7eff0a5eb7d0>,\n",
-              " 'http://127.0.0.1:7860/',\n",
-              " 'https://50236.gradio.app')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 17
         }
       ]
     }
