Creato con Colaboratory

--- a/Progetto.ipynb
+++ b/Progetto.ipynb
@@ -2381,7 +2381,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#fine tune no freeze (MIGLIORE)\n",
+        "#fine tune no freeze (best.pt)\n",
         "!python train.py --img 640 --batch-size 16 --epochs 40 --data ../fire_config.yaml --cfg models/yolov5s.yaml --weights runs/train/custom_hyp/weights/best.pt --cache --device 0 --hyp data/hyps/hyp_finetune.yaml --name fine_tuning"
       ],
       "metadata": {
@@ -3036,7 +3036,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#validation vecchio modello\n",
+        "#validation (old model)\n",
         "!python val.py --batch 64  --weights ../models/best.pt --data ../fire_config.yaml --verbose --name validation_old"
       ],
       "metadata": {
