--- a/Progetto.ipynb
+++ b/Progetto.ipynb
@@ -230,7 +230,7 @@
         }
       ],
       "source": [
-        "#WANDB STUFF\n",
+        "#WANDB login\n",
         "!pip install wandb\n",
         "!wandb login\n",
         "\n",
